[gd_scene load_steps=8 format=3 uid="uid://c8ehrggcfkrw0"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_bdgjm"]
[ext_resource type="Texture2D" uid="uid://b08vga25qsdfd" path="res://assets/tiles/temp-tilemap.png" id="1_xicd7"]
[ext_resource type="PackedScene" uid="uid://djgv1xsbd7f0c" path="res://scenes/hero.tscn" id="2_f7id6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_krel3"]
texture = ExtResource("1_xicd7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
2:0/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_i8m4u"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_krel3")

[sub_resource type="Curve2D" id="Curve2D_3yxco"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 96, 544, 0, 0, 0, 0, 96, 96)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_p6dhj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 96, 544, 0, 0, 0, 0, 352, 544, 0, 0, 0, 0, 352, 96, 0, 0, 0, 0, 608, 96, 0, 0, 0, 0, 608, 544, 0, 0, 0, 0, 864, 544, 0, 0, 0, 0, 864, 96, 0, 0, 0, 0, 1056, 96)
}
point_count = 8

[node name="Level" type="Node2D"]
script = ExtResource("1_bdgjm")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_i8m4u")
format = 2
layer_0/name = "Terrain"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 1, 0, 0, 65537, 131072, 0, 131073, 131072, 0, 196609, 131072, 0, 262145, 131072, 0, 327681, 131072, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 5, 0, 0, 65541, 131072, 0, 131077, 131072, 0, 196613, 131072, 0, 262149, 131072, 0, 327685, 131072, 0, 6, 0, 0, 65542, 131072, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 7, 0, 0, 65543, 131072, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 8, 0, 0, 65544, 131072, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 9, 0, 0, 65545, 131072, 0, 131081, 131072, 0, 196617, 131072, 0, 262153, 131072, 0, 327689, 131072, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 13, 0, 0, 65549, 131072, 0, 131085, 131072, 0, 196621, 131072, 0, 262157, 131072, 0, 327693, 131072, 0, 14, 0, 0, 65550, 131072, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 15, 0, 0, 65551, 131072, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 16, 0, 0, 65552, 131072, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 393217, 131072, 0, 458753, 131072, 0, 524289, 131072, 0, 589825, 0, 0, 655361, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 131072, 0, 589826, 0, 0, 655362, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 131072, 0, 589827, 0, 0, 655363, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 131072, 0, 589828, 0, 0, 655364, 0, 0, 393221, 131072, 0, 458757, 131072, 0, 524293, 131072, 0, 589829, 0, 0, 655365, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 393225, 131072, 0, 458761, 131072, 0, 524297, 131072, 0, 589833, 0, 0, 655369, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 131072, 0, 589834, 0, 0, 655370, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 131072, 0, 589835, 0, 0, 655371, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 131072, 0, 589836, 0, 0, 655372, 0, 0, 393229, 131072, 0, 458765, 131072, 0, 524301, 131072, 0, 589837, 0, 0, 655373, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 18, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0)
layer_1/name = "Objects"
layer_1/tile_data = PackedInt32Array(524289, 262144, 1, 393219, 262144, 0, 196611, 262144, 0, 196615, 262144, 0, 393227, 262144, 0, 65537, 327680, 1, 65552, 327680, 0)

[node name="MiningPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3yxco")

[node name="PathFollow2D" type="PathFollow2D" parent="MiningPath"]
position = Vector2(96, 544)
rotation = -1.5708

[node name="Hero" parent="MiningPath/PathFollow2D" instance=ExtResource("2_f7id6")]
speed = 100

[node name="PathFollow2D2" type="PathFollow2D" parent="MiningPath"]
position = Vector2(96, 544)
rotation = -1.5708

[node name="Hero2" parent="MiningPath/PathFollow2D2" instance=ExtResource("2_f7id6")]
speed = 50

[node name="PathFollow2D3" type="PathFollow2D" parent="MiningPath"]
position = Vector2(96, 544)
rotation = -1.5708

[node name="Hero3" parent="MiningPath/PathFollow2D3" instance=ExtResource("2_f7id6")]
speed = 150

[node name="FightingPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_p6dhj")

[node name="PathFollow2D" type="PathFollow2D" parent="FightingPath"]
position = Vector2(96, 544)

[node name="Hero" parent="FightingPath/PathFollow2D" instance=ExtResource("2_f7id6")]
status = 3
speed = 500

[node name="MagicStonesLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Magic Stones: 0"

[node name="DemonLordHP" type="Label" parent="."]
offset_left = 1024.0
offset_top = 23.0
offset_right = 1064.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "100"
